[tool.poetry]
name = "sweeper"
version = "0.1.0"
description = "console minesweeper game"
authors = ["Igor Serebryany <igor47@moomers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
curtsies = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
